--- a/src/constrained-template.cfg
+++ b/src/constrained-template.cfg
@@ -8,4 +8,4 @@ sd_merger_times = 0.7;
 run_length = 1000000;
 
 # relative location of the data file
-input_file = "./Data/finitesites-XYZ.dat";
+input_file = "./data/constrained-XYZ.dat";
